Bug 1602003 - Correct writing-mode handling of nsDocumentViewer::GetContentSize. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D57640